# OpencvAnisotropy

./: CMakeLists.txt  README.md  test_integral_corr2.cpp
include/: lut.h  util.h
src/: util.cpp
